--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ip": "^2.0.1",
     "socket.io": "^4.7.1"
